[package]
name = "dmx3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
colog = "1.3.0"
ctrlc = "3.4.7"
enttecopendmx = "0.1.1"
json = "0.12.4"
libftd2xx = "0.33.1"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.13.0"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
paho-mqtt = { version = "0.13", features=["vendored-ssl"] }
